# RA4M1-CMake

./: .gitmodules  CMakeLists.txt  README.md  build.py  toolchain-arm-gcc.cmake
ra/fsp/src/bsp/cmsis/Device/RENESAS/Source/: startup.c  system.c
ra_cfg/: FreeRTOSConfig.h
ra_cfg/fsp_cfg/bsp/: bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h
ra_gen/: bsp_clock_cfg.h  main.c  pin_data.c  syscalls.c
script/: fsp.ld
src/: hal_entry.c
